Fixing home page spacing

--- a/stylesheet1.css
+++ b/stylesheet1.css
@@ -179,8 +179,8 @@ footer a {
  
 
 .imgpages img{
-    width: 48%;
-    padding: 4% 0 4% 2%;
+    width: 46%;
+    padding: 4% 2% 4% 2%;
     float: left;
     
 }
